#ifndef ACTION_H
#define ACTION_H

enum class Action {
    MoveFwd,
    MoveBack,
    Shoot,
    RotateLeft_1_8,
    RotateRight_1_8,
    RotateLeft_1_4,
    RotateRight_1_4,
    None
};


#endif // ACTION_H
