#ifndef DIRECTION_H
#define DIRECTION_H

enum class Direction {
    U = 0,   // Up
    UR,  // Up-Right
    R,   // Right
    DR,  // Down-Right
    D,   // Down
    DL,  // Down-Left
    L,   // Left
    UL   // Up-Left
};

#endif // DIRECTION_H
